--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 <div id="home-jumbotron" class="jumbotron text-center">
   <h1 class="title">{{ .Site.Title }}</h1>
+  <img src="/image.png" alt="" />
 </div>
 {{ end }}
