--- a/themes/zuzu/layouts/partials/head/favicon.html
+++ b/themes/zuzu/layouts/partials/head/favicon.html
@@ -68,7 +68,7 @@
   href="/favicon/favicon-16x16.png"
 />
 <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon" />
-<link rel="icon" href="/favicon/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 <link rel="manifest" href="/favicon/manifest.json" />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
