--- a/themes/zuzu/layouts/_default/baseof.html
+++ b/themes/zuzu/layouts/_default/baseof.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lnag="ko-KR">
   {{- partial "head/head.html" . -}}
   <body>
     {{- partial "header/header.html" . -}}
     <div id="content">{{- block "main" . }}{{- end }}</div>
-    {{- partial "footer/footer.html" . -}}
+    {{- partial "footer/footer.html" . -}} {{- partial "script.html" . -}}
   </body>
 </html>
