--- a/themes/zuzu/layouts/partials/head/head.html
+++ b/themes/zuzu/layouts/partials/head/head.html
@@ -1,7 +1,5 @@
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/bootstrap.min.css" />
+  {{- partial "head/metadata.html" . -}} {{- partial "head/prerender.html" . -}}
   {{- partial "head/favicon.html" . -}} 
   {{ $title := print .Site.Title " | " .Title }} 
   {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
