--- a/themes/zuzu/layouts/partials/head/prerender.html
+++ b/themes/zuzu/layouts/partials/head/prerender.html
@@ -4,3 +4,4 @@
   href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap"
   rel="stylesheet"
 />
+<link rel="stylesheet" href="/dist/css/main.min.css" as="style" />
