--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -1,4 +1,6 @@
-<script src="/js/feather.min.js"></script>
+<script src="/js/vendor/jquery.min.js"></script>
+<script src="/js/vendor/bootstrap.js"></script>
+<script src="/js/vendor/feather.min.js"></script>
 <script>
   feather.replace();
 </script>
