--- a/themes/zuzu/layouts/partials/head/favicon.html
+++ b/themes/zuzu/layouts/partials/head/favicon.html
@@ -1,5 +1,9 @@
-<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-<link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href={{"/assets/favicon.ico"| absURL }} type="image/x-icon" />
+<link rel="shortcut icon" href={{"/assets/favicon.ico"| relURL }} type="image/x-icon" />
+
+<link rel="icon" href={{"/assets/favicon.ico " | absURL }} type="image/x-icon" />
+<link rel="icon" href={{"/assets/favicon.ico " | relURL }} type="image/x-icon" />
+
 <link
   rel="apple-touch-icon"
   sizes="57x57"
@@ -69,7 +73,8 @@
   sizes="16x16"
   href="/assets/favicon-16x16.png"
 />
-<link rel="manifest" href="/assets/manifest.json" />
+<link rel="manifest" href={{"/assets/manifest.json" | absURL}} />
+<link rel="manifest" href={{"/assets/manifest.json" | relURL}} />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
 <meta name="theme-color" content="#ffffff" />
