--- a/themes/zuzu/layouts/partials/header/header.html
+++ b/themes/zuzu/layouts/partials/header/header.html
@@ -1,14 +1,49 @@
-<div id="nav-border" class="container">
-    <nav id="nav" class="nav justify-content-center">
-        {{ range .Site.Menus.main }}
-        <a class="nav-link" href="{{ .URL }}">
-        {{ if .Pre }}
-        {{ $icon := printf "<i data-feather=\"%s\"></i> " .Pre | safeHTML }}
-        {{ $icon }}
-        {{ end }}
-        {{ $text := print .Name | safeHTML }}
-        {{ $text }}
-        </a>
-        {{ end }}
-    </nav>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+  <nav class="main-nav navbar navbar-expand-lg" aria-label="main navigation" role="menu">
+      <a href="{{ .Site.BaseURL }}" title="주주 리걸" class="navbar-brand">
+        <img
+          src=""
+          alt="주주 리걸 로고"
+          class="inline-block align-middle mr-2"
+        />
+      </a>
+      <button
+      data-toggle="collapse"
+      type="button"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        class="navbar-toggler"
+        ><span>메뉴</span></button
+      >
+      <div id="navbarSupportedContent" class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+              {{ $currentPage := . }}
+              {{ range .Site.Menus.main }}
+                  {{ if .HasChildren }}
+                      <li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }} nav-item dropdown">
+                          <a href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle" > 
+                              {{ .Name }}
+                          </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          {{ range .Children }}
+                              <a href="{{ .URL | safeURL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} dropdown-item">{{ .Name }}</a>                            
+                          {{ end }}
+                      </div>
+                    </li>
+                  {{ else }}
+                      <li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }} nav-item">
+                          <a href="{{ .URL | safeURL }}" class="nav-link">
+                              {{ .Name }}
+                          </a>
+                      </li>
+                  {{ end }}
+              {{ end }}
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
 </div>
