--- a/themes/zuzu/static/scss/base/_typography.scss
+++ b/themes/zuzu/static/scss/base/_typography.scss
@@ -33,7 +33,7 @@
 
 $min_width: 320px;
 $max_width: 1600px;
-$min_font: 14px;
+$min_font: 16px;
 $max_font: 20px;
 
 /** 
@@ -50,32 +50,39 @@ html {
 h1 {
   margin-top: 0;
   font-size: 3.052rem;
+  letter-spacing: -0.04rem;
 }
 
 h2 {
   font-size: 2.441rem;
+  letter-spacing: -0.03rem;
 }
 
 h3 {
   font-size: 1.953rem;
+  letter-spacing: -0.02rem;
 }
 
 h4 {
   font-size: 1.563rem;
+  letter-spacing: -0.02rem;
 }
 
 h5 {
   font-size: 1.25rem;
+  letter-spacing: -0.02rem;
 }
 
 p {
   font-size: 1rem;
   line-height: 2;
+  letter-spacing: -0.01rem;
 }
 
 small,
-.text_small {
+.text-small {
   font-size: 0.8rem;
+  letter-spacing: 0.01rem;
 }
 
 /**
