--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-<div id="home-jumbotron" class="jumbotron text-center"> </div>
+{{- partial "section/main.html" . -}}
 {{ end }}
