--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -2,6 +2,8 @@
 <script src="/js/vendor/bootstrap.js"></script>
 <script src="/js/vendor/feather.min.js"></script>
 <script src="/js/vendor/lottie-player.js"></script>
+<script src="/js/vendor/aos.js"></script>
 <script>
   feather.replace();
+  AOS.init();
 </script>
