--- a/themes/zuzu/layouts/partials/head/prerender.html
+++ b/themes/zuzu/layouts/partials/head/prerender.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | absURL }} />
 <link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | relURL }} />
+<link rel="stylesheet" href={{"/css/vendor/aos.css" | absURL }} />
+<link rel="stylesheet" href={{"/css/vendor/aos.css" | relURL }} />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
   href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap"
