--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -113,17 +113,27 @@ input {
   border-radius: 0;
 }
 
-section {
-  padding: 6.4rem;
+.row + .row {
+  margin-top: 3rem;
 }
 
-a.no-decoration {
-  color: rgba(0, 0, 0, 0.38);
-  text-decoration: none;
+*[onclick] {
+  cursor: pointer;
 }
 
-a.no-decoration:hover {
-  text-decoration: underline;
+.flip-horizontal {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+/** To do: Add Gradient Background Secondary (We already use in banner.scss) */
+/** To do: Change box-shadow to function */
+@media screen and (max-width: 768px) {
+  *[class^="col-md"] + *[class^="col-md"] {
+    margin-top: 2.25rem;
+  }
 }
 
 /** 
@@ -139,22 +149,7 @@ a.no-decoration:hover {
 */
 html {
   font-family: "Noto Sans KR", sans-serif;
-}
-
-html {
   font-size: 14px;
-}
-
-@media screen and (min-width: 320px) {
-  html {
-    font-size: calc( 14px + 2 * ((100vw - 320px) / 1280));
-  }
-}
-
-@media screen and (min-width: 1600px) {
-  html {
-    font-size: 16px;
-  }
 }
 
 h1,
@@ -162,7 +157,7 @@ h2,
 h3,
 h4,
 h5 {
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
 h1 {
@@ -170,6 +165,7 @@ h1 {
   font-size: 3.052rem;
   letter-spacing: -0.04rem;
   font-weight: 900;
+  color: #2e2e2e;
 }
 
 h2 {
@@ -192,8 +188,7 @@ h5 {
   letter-spacing: -0.02rem;
 }
 
-p,
-.body-text {
+p {
   font-size: 1rem;
   line-height: 2;
   letter-spacing: -0.01rem;
@@ -208,12 +203,78 @@ small,
 /**
  * * TYPE SCALE ENDS;
  */
-.row + .row {
-  margin-top: 2.4rem;
+/**
+ * * TYPOGRAPHY MIXIN;
+ */
+section {
+  padding: 6rem 3rem;
+  position: relative;
+  z-index: 1;
 }
 
-*[onclick] {
-  cursor: pointer;
+section.background-dim:after {
+  content: "";
+  background-image: url("/assets/images/background.jpg");
+  background-repeat: no-repeat;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-size: cover;
+  opacity: 0.15;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+section .vh-80 {
+  min-height: 80vh;
+}
+
+section .section-title {
+  font-size: 2.441rem;
+  font-weight: 700;
+  letter-spacing: -0.03rem;
+  line-height: 1.75;
+  color: #2e2e2e;
+}
+
+section .section-title > h1,
+section .section-title h2,
+section .section-title h3,
+section .section-title h4,
+section .section-title h5,
+section .section-title h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+section .section-subtitle {
+  font-size: 1.563rem;
+  font-weight: 500;
+  letter-spacing: -0.02rem;
+  line-height: 1.75;
+  color: #535353;
+}
+
+section .section-subtitle > h1,
+section .section-subtitle h2,
+section .section-subtitle h3,
+section .section-subtitle h4,
+section .section-subtitle h5,
+section .section-subtitle h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+a.no-decoration {
+  color: rgba(0, 0, 0, 0.38);
+  text-decoration: none;
+}
+
+a.no-decoration:hover {
+  text-decoration: underline;
 }
 
 .button {
@@ -229,17 +290,14 @@ small,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0.4rem 0.8rem;
+  padding: 0.375rem 0.75rem;
   background-color: transparent;
-  border-radius: 0.6rem;
+  border-radius: 0.5625rem;
   border: none;
   -webkit-transition: all 0.121s ease-out;
   transition: all 0.121s ease-out;
   /** 
   * * BUTTON SIZE: large, medium, small
-  */
-  /** 
-  * * BUTTON TYPOGRAPHY
   */
   /** 
   * * BUTTON PRIORITY: primary, secondary, tertiary
@@ -250,108 +308,66 @@ small,
 }
 
 .button-large {
-  padding: 1.2rem 2.4rem;
-  background-color: #ffffff;
-  font-size: 1.25rem;
+  padding: 1.125rem 2.25rem;
+  font-size: 1.563rem;
+  font-weight: 700;
+  letter-spacing: -0.02rem;
   line-height: 1;
-  font-weight: 500;
-  letter-spacing: -0.01rem;
+}
+
+.button-large > h1,
+.button-large h2,
+.button-large h3,
+.button-large h4,
+.button-large h5,
+.button-large h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
 }
 
 .button-medium {
-  padding: 0.8rem 1.2rem;
-  font-size: 1rem;
+  padding: 0.75rem 1.125rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: -0.02rem;
   line-height: 1;
-  font-weight: 500;
-  letter-spacing: -0.01rem;
+}
+
+.button-medium > h1,
+.button-medium h2,
+.button-medium h3,
+.button-medium h4,
+.button-medium h5,
+.button-medium h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
 }
 
 .button-small {
-  padding: 0.4rem 0.8rem;
-}
-
-.button-label-large-black {
-  font-size: 1.25rem;
-  line-height: 1;
-  font-weight: 900;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-large-bold {
-  font-size: 1.25rem;
-  line-height: 1;
-  font-weight: 700;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-large-medium {
-  font-size: 1.25rem;
-  line-height: 1;
-  font-weight: 500;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-large-regular {
-  font-size: 1.25rem;
-  line-height: 1;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
   font-weight: 400;
   letter-spacing: -0.01rem;
+  line-height: 1;
 }
 
-.button-label-medium-black {
-  font-size: 1rem;
-  line-height: 1;
-  font-weight: 900;
-  letter-spacing: -0.01rem;
+.button-small > h1,
+.button-small h2,
+.button-small h3,
+.button-small h4,
+.button-small h5,
+.button-small h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
 }
 
-.button-label-medium-bold {
-  font-size: 1rem;
-  line-height: 1;
-  font-weight: 700;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-medium-medium {
-  font-size: 1rem;
-  line-height: 1;
-  font-weight: 500;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-medium-regular {
-  font-size: 1rem;
-  line-height: 1;
-  font-weight: 400;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-small-black {
-  font-size: 0.9rem;
-  line-height: 1;
-  font-weight: 900;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-small-bold {
-  font-size: 0.9rem;
-  line-height: 1;
-  font-weight: 700;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-small-medium {
-  font-size: 0.9rem;
-  line-height: 1;
-  font-weight: 500;
-  letter-spacing: -0.01rem;
-}
-
-.button-label-small-regular {
-  font-size: 0.9rem;
-  line-height: 1;
-  font-weight: 400;
-  letter-spacing: -0.01rem;
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  .button-small {
+    font-size: 1.25rem;
+  }
 }
 
 .button-primary {
@@ -407,88 +423,11 @@ a.no-decoration:hover {
   text-decoration: underline;
 }
 
-/** 
- * * NOTICE 
-  FLUID TYPOGRAPHY SYSTEM
-  https://css-tricks.com/snippets/css/fluid-typography/
-  https://css-tricks.com/simplified-fluid-typography/
- */
-/** 
- * * TYPE SCALE STARTS;
- * MAJOR-THIRD MODULAR TYPE SCALE
- * https://type-scale.com/
-*/
-html {
-  font-family: "Noto Sans KR", sans-serif;
+nav.main-nav {
+  position: relative;
+  z-index: 100;
 }
 
-html {
-  font-size: 14px;
-}
-
-@media screen and (min-width: 320px) {
-  html {
-    font-size: calc( 14px + 2 * ((100vw - 320px) / 1280));
-  }
-}
-
-@media screen and (min-width: 1600px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  line-height: 1.3;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.052rem;
-  letter-spacing: -0.04rem;
-  font-weight: 900;
-}
-
-h2 {
-  font-size: 2.441rem;
-  letter-spacing: -0.03rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-  letter-spacing: -0.02rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-  letter-spacing: -0.02rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-  letter-spacing: -0.02rem;
-}
-
-p,
-.body-text {
-  font-size: 1rem;
-  line-height: 2;
-  letter-spacing: -0.01rem;
-}
-
-small,
-.text-small {
-  font-size: 0.8rem;
-  letter-spacing: 0.01rem;
-}
-
-/**
- * * TYPE SCALE ENDS;
- */
 nav.main-nav .navbar-inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -496,15 +435,15 @@ nav.main-nav .navbar-inner {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.8rem 0;
+  padding: 0.75rem 0;
 }
 
 nav.main-nav .navbar-brand {
-  padding: 0.4rem 0.8rem;
+  padding: 0.375rem 0.75rem;
 }
 
 nav.main-nav .navbar-brand .logo {
-  width: 7.2rem;
+  width: 6rem;
 }
 
 nav.main-nav .desktop-nav {
@@ -517,31 +456,197 @@ nav.main-nav .desktop-nav {
 }
 
 nav.main-nav .nav-item .nav-link {
-  font-size: 0.9rem;
-  line-height: 1;
+  font-size: 1rem;
   font-weight: 400;
   letter-spacing: -0.01rem;
+  line-height: 1;
   color: #535353;
-  padding: 0.4rem 0.8rem;
+  padding: 0.375rem 0.75rem;
+}
+
+nav.main-nav .nav-item .nav-link > h1,
+nav.main-nav .nav-item .nav-link h2,
+nav.main-nav .nav-item .nav-link h3,
+nav.main-nav .nav-item .nav-link h4,
+nav.main-nav .nav-item .nav-link h5,
+nav.main-nav .nav-item .nav-link h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  nav.main-nav .nav-item .nav-link {
+    font-size: 1.25rem;
+  }
+}
+
+nav.main-nav .active {
+  font-weight: 700;
+  color: #4aa570;
+}
+
+nav.main-nav .active .nav-link {
+  color: inherit;
+  font-weight: inherit;
+}
+
+/** Use 'custom' as a prefix not to override Bootstrap card' */
+.custom-card {
+  width: 95%;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+  border: 1px solid #e6e6e6;
+  border-radius: 0.5625rem;
+  padding: 1.5rem;
+  /** To do: Add a card title */
+}
+
+.custom-card-description {
+  max-width: 100%;
+  word-break: break-all;
+  word-wrap: break-word;
+  font-size: 1.25rem;
+  font-weight: 500;
+  letter-spacing: -0.02rem;
+  line-height: 2;
+}
+
+.custom-card-description > h1,
+.custom-card-description h2,
+.custom-card-description h3,
+.custom-card-description h4,
+.custom-card-description h5,
+.custom-card-description h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+.custom-card-meta {
+  margin-top: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.custom-card-meta-image {
+  margin-right: 0.375rem;
+  border-radius: 100%;
+}
+
+.custom-card-meta-text {
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: -0.01rem;
+  line-height: 1.3;
+}
+
+.custom-card-meta-text > h1,
+.custom-card-meta-text h2,
+.custom-card-meta-text h3,
+.custom-card-meta-text h4,
+.custom-card-meta-text h5,
+.custom-card-meta-text h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  .custom-card-meta-text {
+    font-size: 1.25rem;
+  }
+}
+
+.custom-icon-8 {
+  width: 0.75rem;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.custom-icon-16 {
+  width: 1.5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.custom-icon-24 {
+  width: 2.25rem;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.custom-icon-32 {
+  width: 3rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.custom-icon-40 {
+  width: 3.75rem;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.custom-icon-48 {
+  width: 4.5rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.custom-icon-56 {
+  width: 5.25rem;
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
+}
+
+.custom-icon-64 {
+  width: 6rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.custom-icon-72 {
+  width: 6.75rem;
+  margin-left: 2.25rem;
+  margin-right: 2.25rem;
+}
+
+.custom-icon-80 {
+  width: 7.5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .feather-8 {
-  width: 0.8rem;
+  width: 0.75rem;
+  height: 0.75rem;
 }
 
 .feather-16 {
-  width: 1.6rem;
-  height: 1.6rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .feather-24 {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 2.25rem;
+  height: 2.25rem;
 }
 
 .feather-32 {
-  width: 3.2rem;
-  height: 3.2rem;
+  width: 3rem;
+  height: 3rem;
 }
 
 .banner {
@@ -551,9 +656,9 @@ nav.main-nav .nav-item .nav-link {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.8rem 2.4rem;
-  background: -webkit-gradient(linear, right top, left top, from(#9d50bb), to(#6e48aa));
-  background: linear-gradient(270deg, #9d50bb, #6e48aa);
+  padding: 0.75rem 2.25rem;
+  background: -webkit-gradient(linear, right top, left top, from(#6e48aa), to(#9d50bb));
+  background: linear-gradient(270deg, #6e48aa, #9d50bb);
   background-size: 400% 400%;
   -webkit-animation: GradientAnimation 4s ease-out infinite;
           animation: GradientAnimation 4s ease-out infinite;
@@ -585,87 +690,88 @@ nav.main-nav .nav-item .nav-link {
 }
 
 /** 
- * * NOTICE 
-  FLUID TYPOGRAPHY SYSTEM
-  https://css-tricks.com/snippets/css/fluid-typography/
-  https://css-tricks.com/simplified-fluid-typography/
- */
-/** 
- * * TYPE SCALE STARTS;
- * MAJOR-THIRD MODULAR TYPE SCALE
- * https://type-scale.com/
+* Override default bootstrap dropdown menu style 
 */
-html {
-  font-family: "Noto Sans KR", sans-serif;
+.custom-dropdown-menu {
+  background-color: white;
+  z-index: 10;
+  padding: 1.125rem 0;
+  border-radius: 0.5625rem;
+  -webkit-box-shadow: 0 8px 14px 0 rgba(56, 64, 82, 0.08), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 0 8px 14px 0 rgba(56, 64, 82, 0.08), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+  border-color: #e6e6e6;
 }
 
-html {
-  font-size: 14px;
-}
-
-@media screen and (min-width: 320px) {
-  html {
-    font-size: calc( 14px + 2 * ((100vw - 320px) / 1280));
-  }
-}
-
-@media screen and (min-width: 1600px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  line-height: 1.3;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.052rem;
-  letter-spacing: -0.04rem;
-  font-weight: 900;
-}
-
-h2 {
-  font-size: 2.441rem;
-  letter-spacing: -0.03rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-  letter-spacing: -0.02rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-  letter-spacing: -0.02rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-  letter-spacing: -0.02rem;
-}
-
-p,
-.body-text {
+.custom-dropdown-menu .custom-dropdown-item {
   font-size: 1rem;
-  line-height: 2;
+  font-weight: 400;
   letter-spacing: -0.01rem;
+  line-height: 1;
+  padding: 0.75rem 2.25rem;
 }
 
-small,
-.text-small {
-  font-size: 0.8rem;
-  letter-spacing: 0.01rem;
+.custom-dropdown-menu .custom-dropdown-item > h1,
+.custom-dropdown-menu .custom-dropdown-item h2,
+.custom-dropdown-menu .custom-dropdown-item h3,
+.custom-dropdown-menu .custom-dropdown-item h4,
+.custom-dropdown-menu .custom-dropdown-item h5,
+.custom-dropdown-menu .custom-dropdown-item h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
 }
 
-/**
- * * TYPE SCALE ENDS;
- */
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  .custom-dropdown-menu .custom-dropdown-item {
+    font-size: 1.25rem;
+  }
+}
+
+.custom-dropdown-menu .active {
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: -0.01rem;
+  line-height: 1;
+}
+
+.custom-dropdown-menu .active > h1,
+.custom-dropdown-menu .active h2,
+.custom-dropdown-menu .active h3,
+.custom-dropdown-menu .active h4,
+.custom-dropdown-menu .active h5,
+.custom-dropdown-menu .active h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  .custom-dropdown-menu .active {
+    font-size: 1.25rem;
+  }
+}
+
+.lottie-player-80 {
+  width: 7.5rem;
+  height: 7.5rem;
+}
+
+.lottie-player-160 {
+  width: 15rem;
+  height: 15rem;
+}
+
+.lottie-player-240 {
+  width: 22.5rem;
+  height: 22.5rem;
+}
+
+.lottie-player-480 {
+  width: 45rem;
+  height: 45rem;
+}
+
 footer {
   width: 100%;
   background-color: #ffffff;
@@ -675,11 +781,11 @@ footer .footer-inner {
   max-width: 1024px;
   margin-right: auto;
   margin-left: auto;
-  padding: 2.4rem;
+  padding: 2.25rem;
 }
 
 footer .row + .row {
-  margin-top: 1.6rem;
+  margin-top: 1.5rem;
 }
 
 footer .footer-group .footer-group-title a,
@@ -692,20 +798,59 @@ footer .footer-group .footer-group-list-company-info p {
 }
 
 footer .footer-group .footer-group-title {
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.375rem;
   color: #535353;
   font-size: 1rem;
-  line-height: 1;
   font-weight: 500;
   letter-spacing: -0.01rem;
+  line-height: 1.3;
+}
+
+footer .footer-group .footer-group-title > h1,
+footer .footer-group .footer-group-title h2,
+footer .footer-group .footer-group-title h3,
+footer .footer-group .footer-group-title h4,
+footer .footer-group .footer-group-title h5,
+footer .footer-group .footer-group-title h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  footer .footer-group .footer-group-title {
+    font-size: 1.25rem;
+  }
 }
 
 footer .footer-group .footer-group-list, footer .footer-group .footer-group-list-company-info {
-  padding: 0.6rem 0;
-  font-size: 0.9rem;
-  line-height: 1;
-  font-weight: 500;
+  padding: 0.5625rem 0;
+  font-size: 1rem;
+  font-weight: 400;
   letter-spacing: -0.01rem;
+  line-height: 1.3;
+}
+
+footer .footer-group .footer-group-list > h1, footer .footer-group .footer-group-list-company-info > h1,
+footer .footer-group .footer-group-list h2,
+footer .footer-group .footer-group-list-company-info h2,
+footer .footer-group .footer-group-list h3,
+footer .footer-group .footer-group-list-company-info h3,
+footer .footer-group .footer-group-list h4,
+footer .footer-group .footer-group-list-company-info h4,
+footer .footer-group .footer-group-list h5,
+footer .footer-group .footer-group-list-company-info h5,
+footer .footer-group .footer-group-list h6,
+footer .footer-group .footer-group-list-company-info h6 {
+  line-height: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+@media screen and (min-width: 368px) and (max-width: 768px) {
+  footer .footer-group .footer-group-list, footer .footer-group .footer-group-list-company-info {
+    font-size: 1.25rem;
+  }
 }
 
 footer .footer-group .footer-group-list-company-info {
