--- a/themes/zuzu/static/scss/components/_icon.scss
+++ b/themes/zuzu/static/scss/components/_icon.scss
@@ -1,7 +1,19 @@
-@import '../abstract/variable';
+@import "../abstract/variable";
+
+$size: "8" $baseUnit, "16" $baseUnit * 2, "24" $baseUnit * 3, "32" $baseUnit * 4, "40" $baseUnit * 5, "48" $baseUnit * 6,
+  "56" $baseUnit * 7, "64" $baseUnit * 8, "72" $baseUnit * 9, "80" $baseUnit * 10;
+
+@each $name, $width in $size {
+  .custom-icon-#{$name} {
+    width: $width;
+    margin-left: $width/3;
+    margin-right: $width/3;
+  }
+}
 
 .feather-8 {
   width: $baseUnit;
+  height: $baseUnit;
 }
 .feather-16 {
   width: $baseUnit * 2;
